--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -46,6 +46,18 @@ jobs:
           export_default_credentials: true
 
 
+      - name: Set up Go For Terratest
+        uses: actions/setup-go@v2
+        
+      - name: Setup Dependencies
+        working-directory: tests/
+        run:  go get -v -t -d && go mod tidy
+
+      - name: Test
+        working-directory: tests/
+        run: go test -v
+                       
+
       - name: Terraform Plan
         continue-on-error: true
         run: |
@@ -53,6 +65,6 @@ jobs:
             terraform plan -var-file="dev.auto.tfvars"
 
 
-      - name: Terraform Apply
-        run: |
-            terraform apply -var-file="dev.auto.tfvars" --auto-approve
+      #- name: Terraform Apply
+      #  run: |
+      #      terraform apply -var-file="dev.auto.tfvars" --auto-approve
