--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -12,6 +12,33 @@ concurrency:
 defaults:
   run:
     shell: bash
+    working-directory: ./test
+jobs:
+  terratest_phase:
+      - name: Checkout
+        uses: actions/checkout@main
+
+      - name: Setup GCP Service Account
+        uses: google-github-actions/setup-gcloud@94337306dda8180d967a56932ceb4ddcf01edae7
+        with:
+          version: 'latest'
+          service_account_email: ${{ secrets.GCP_SA_EMAIL }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
+
+      - name: Set up Go For Terratest
+        uses: actions/setup-go@v2
+
+      - name: Setup Dependencies
+        run:  go get -v -t -d && go mod tidy
+
+      - name: Test
+        run: go test -v
+
+
+defaults:
+  run:
+    shell: bash
     working-directory: ./dev
 jobs:
   terraform_plan:
@@ -45,18 +72,6 @@ jobs:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
 
-
-      - name: Set up Go For Terratest
-        uses: actions/setup-go@v2
-        
-      - name: Setup Dependencies
-        working-directory: ../tests/
-        run:  go get -v -t -d && go mod tidy
-
-      - name: Test
-        working-directory: ../tests/
-        run: go test -v
-                       
 
       - name: Terraform Plan
         continue-on-error: true
