--- a/.github/workflows/terratest.yml
+++ b/.github/workflows/terratest.yml
@@ -49,4 +49,4 @@ jobs:
         run:  go get -v -t -d && go mod tidy
 
       - name: Test
-        run: go test -v
+        run: go test -timeout 30m -p 1
